# osprey

./: .gitattributes  .gitignore  .markdownlint-cli2.yaml  CLAUDE.md  Cargo.toml  DIA-PeakDetectionPlan.md  LICENSE  Makefile  NOTICE.md  README.md  osprey_specification_v1.2.md  status.txt  temp-notes.txt  temp.txt
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
crates/osprey/: Cargo.toml
crates/osprey-chromatography/: Cargo.toml
crates/osprey-chromatography/src/: calibration.rs  cwt.rs  lib.rs
crates/osprey-chromatography/src/calibration/: io.rs  mass.rs  mod.rs  rt.rs
crates/osprey-core/: Cargo.toml
crates/osprey-core/src/: config.rs  diagnostics.rs  error.rs  isotope.rs  lib.rs  traits.rs  types.rs
crates/osprey-fdr/: Cargo.toml
crates/osprey-fdr/src/: lib.rs  mokapot.rs  percolator.rs  protein.rs
crates/osprey-io/: Cargo.toml
crates/osprey-io/src/: cache.rs  lib.rs
crates/osprey-io/src/mzml/: mod.rs  parser.rs  spectra_cache.rs  streaming.rs
crates/osprey-io/src/output/: blib.rs  mod.rs  report.rs
crates/osprey-ml/: Cargo.toml
crates/osprey-ml/src/: gauss.rs  kde.rs  lib.rs  linear_discriminant.rs  matrix.rs  pep.rs  qvalue.rs  svm.rs
crates/osprey-regression/: Cargo.toml
crates/osprey-regression/src/: binning.rs  cd_nnls.rs  lib.rs  matrix.rs  optimized.rs  ridge.rs  solver.rs  sparse.rs
crates/osprey-scoring/: Cargo.toml
crates/osprey-scoring/src/: batch.rs  calibration_ml.rs  diagnostics.rs  lib.rs  xcorr_pool.rs
crates/osprey-scoring/src/pipeline/: accumulator.rs  coordinator.rs  mod.rs  preprocessor.rs
crates/osprey/src/: diagnostics.rs  lib.rs  logging.rs  main.rs  pipeline.rs  reconciliation.rs  trace.rs
docs/: 01-decoy-generation.md  02-calibration.md  03-spectral-scoring.md  04-xcorr-scoring.md  05-peak-detection.md  06-multi-charge-consensus.md  07-fdr-control.md  08-blib-output-schema.md  09-determinism.md  10-cross-run-reconciliation.md  10-spectra-cache.md  11-testing.md  12-intermediate-files.md  13-boundary-overrides.md  14-rt-alignment.md  15-blas-vectorization.md  16-protein-parsimony.md  17-peptide-trace.md  DIA-PeakDetectionPlan.md  README.md  blib-output-schema.md  calibration.md  composite-peak-selection.md  deconvolution-scoring.md  decoy-generation.md  determinism.md  documentation-overview.md  fdr-control.md  mass-calibration.md  osprey_specification_v1.2.md  peak-detection.md  ridge-regression.md  rt-calibration.md  spectral-scoring.md  xcorr-scoring.md
notebooks/: 01_cwt_peak_detection.ipynb  02_fragment_coelution_scoring.ipynb  03_osprey_workflow.ipynb  04_median_polish_cosine.ipynb  05_osprey_vs_diann.ipynb
release-notes/: README.md  RELEASE_NOTES_next.md  RELEASE_NOTES_v26.1.0.md  RELEASE_NOTES_v26.1.1.md  RELEASE_NOTES_v26.1.2.md  RELEASE_NOTES_v26.1.3.md  RELEASE_NOTES_v26.2.0.md  RELEASE_NOTES_v26.3.0.md  RELEASE_NOTES_v26.3.1.md  RELEASE_NOTES_v26.4.0.md
scripts/: README.md  compare_library_rt.py  compare_scan_numbers.py  evaluate_calibration.py  inspect_mokapot_weights.py  requirements.txt  verify_blib_rt_consistency.py  visualize_pin_features.py
