[workspace]
resolver = "2"
members = [
    "crates/osprey-core",
    "crates/osprey-io",
    "crates/osprey-chromatography",
    "crates/osprey-scoring",
    "crates/osprey-fdr",
    "crates/osprey-ml",
    "crates/osprey",
]

[workspace.package]
version = "26.1.3"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/maccoss/osprey"
authors = ["MacCoss Lab <maccoss@uw.edu>"]
description = "Peptide-centric DIA analysis tool"

[workspace.dependencies]
# Internal crates
osprey-core = { path = "crates/osprey-core" }
osprey-io = { path = "crates/osprey-io" }
osprey-chromatography = { path = "crates/osprey-chromatography" }
osprey-scoring = { path = "crates/osprey-scoring" }
osprey-fdr = { path = "crates/osprey-fdr" }
osprey-ml = { path = "crates/osprey-ml" }

# Core dependencies
ndarray = { version = "0.17", features = ["rayon", "blas"] }
blas-src = { version = "0.14", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.10", default-features = false, features = ["system", "cblas"] }
rayon = "1.10"
arrow = "58"
parquet = "58"

# File I/O
mzdata = "0.63"
rusqlite = { version = "0.39", features = ["bundled"] }
csv = "1.3"
flate2 = "1.0"
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
indicatif = "0.18"
chrono = "0.4"
sha2 = "0.10"
sysinfo = "0.38"

# Testing
approx = "0.5"
tempfile = "3.14"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
debug = true
