[package]
name = "osprey-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types and traits for Osprey DIA analysis"
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
