[package]
name = "osprey-fdr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "FDR control for Osprey (target-decoy, mokapot integration)"
authors.workspace = true
repository.workspace = true

[dependencies]
osprey-core = { workspace = true }
osprey-ml = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
